log/build_2026-03-03_22-03-57/orion_mtc/stdout_stderr.log
Consolidate compiler generated dependencies of target mtc_node
[ 50%] Building CXX object CMakeFiles/mtc_node.dir/src/mtc_node.cpp.o
/home/joey/My_orion/src/orion_mtc/src/mtc_node.cpp: In constructor ‘OrionMTCTaskNode::OrionMTCTaskNode(const rclcpp::NodeOptions&)’:
/home/joey/My_orion/src/orion_mtc/src/mtc_node.cpp:88:10: error: ‘using element_type = class rclcpp::Node’ {aka ‘class rclcpp::Node’} has no member named ‘declare_parameter_if_not_declared’
   88 |   node_->declare_parameter_if_not_declared("approach_object_min_dist", rclcpp::ParameterValue(0.10));
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/joey/My_orion/src/orion_mtc/src/mtc_node.cpp:89:10: error: ‘using element_type = class rclcpp::Node’ {aka ‘class rclcpp::Node’} has no member named ‘declare_parameter_if_not_declared’
   89 |   node_->declare_parameter_if_not_declared("approach_object_max_dist", rclcpp::ParameterValue(0.15));
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/joey/My_orion/src/orion_mtc/src/mtc_node.cpp:90:10: error: ‘using element_type = class rclcpp::Node’ {aka ‘class rclcpp::Node’} has no member named ‘declare_parameter_if_not_declared’
   90 |   node_->declare_parameter_if_not_declared("lift_object_min_dist", rclcpp::ParameterValue(0.05));
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/joey/My_orion/src/orion_mtc/src/mtc_node.cpp:91:10: error: ‘using element_type = class rclcpp::Node’ {aka ‘class rclcpp::Node’} has no member named ‘declare_parameter_if_not_declared’
   91 |   node_->declare_parameter_if_not_declared("lift_object_max_dist", rclcpp::ParameterValue(0.25));
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/joey/My_orion/src/orion_mtc/src/mtc_node.cpp:92:10: error: ‘using element_type = class rclcpp::Node’ {aka ‘class rclcpp::Node’} has no member named ‘declare_parameter_if_not_declared’
   92 |   node_->declare_parameter_if_not_declared("support_surface_link", rclcpp::ParameterValue(""));
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/joey/My_orion/src/orion_mtc/src/mtc_node.cpp:93:10: error: ‘using element_type = class rclcpp::Node’ {aka ‘class rclcpp::Node’} has no member named ‘declare_parameter_if_not_declared’
   93 |   node_->declare_parameter_if_not_declared("place_pose_x", rclcpp::ParameterValue(0.35));
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/joey/My_orion/src/orion_mtc/src/mtc_node.cpp:94:10: error: ‘using element_type = class rclcpp::Node’ {aka ‘class rclcpp::Node’} has no member named ‘declare_parameter_if_not_declared’
   94 |   node_->declare_parameter_if_not_declared("place_pose_y", rclcpp::ParameterValue(0.15));
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/joey/My_orion/src/orion_mtc/src/mtc_node.cpp:95:10: error: ‘using element_type = class rclcpp::Node’ {aka ‘class rclcpp::Node’} has no member named ‘declare_parameter_if_not_declared’
   95 |   node_->declare_parameter_if_not_declared("place_pose_z", rclcpp::ParameterValue(0.4));
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/joey/My_orion/src/orion_mtc/src/mtc_node.cpp:96:10: error: ‘using element_type = class rclcpp::Node’ {aka ‘class rclcpp::Node’} has no member named ‘declare_parameter_if_not_declared’
   96 |   node_->declare_parameter_if_not_declared("place_pose_qx", rclcpp::ParameterValue(0.0));
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/joey/My_orion/src/orion_mtc/src/mtc_node.cpp:97:10: error: ‘using element_type = class rclcpp::Node’ {aka ‘class rclcpp::Node’} has no member named ‘declare_parameter_if_not_declared’
   97 |   node_->declare_parameter_if_not_declared("place_pose_qy", rclcpp::ParameterValue(0.0));
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/joey/My_orion/src/orion_mtc/src/mtc_node.cpp:98:10: error: ‘using element_type = class rclcpp::Node’ {aka ‘class rclcpp::Node’} has no member named ‘declare_parameter_if_not_declared’
   98 |   node_->declare_parameter_if_not_declared("place_pose_qz", rclcpp::ParameterValue(0.0));
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/joey/My_orion/src/orion_mtc/src/mtc_node.cpp:99:10: error: ‘using element_type = class rclcpp::Node’ {aka ‘class rclcpp::Node’} has no member named ‘declare_parameter_if_not_declared’
   99 |   node_->declare_parameter_if_not_declared("place_pose_qw", rclcpp::ParameterValue(1.0));
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/joey/My_orion/src/orion_mtc/src/mtc_node.cpp:100:10: error: ‘using element_type = class rclcpp::Node’ {aka ‘class rclcpp::Node’} has no member named ‘declare_parameter_if_not_declared’
  100 |   node_->declare_parameter_if_not_declared("retreat_min_dist", rclcpp::ParameterValue(0.12));
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/joey/My_orion/src/orion_mtc/src/mtc_node.cpp:101:10: error: ‘using element_type = class rclcpp::Node’ {aka ‘class rclcpp::Node’} has no member named ‘declare_parameter_if_not_declared’
  101 |   node_->declare_parameter_if_not_declared("retreat_max_dist", rclcpp::ParameterValue(0.25));
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/joey/My_orion/src/orion_mtc/src/mtc_node.cpp:102:10: error: ‘using element_type = class rclcpp::Node’ {aka ‘class rclcpp::Node’} has no member named ‘declare_parameter_if_not_declared’
  102 |   node_->declare_parameter_if_not_declared("lower_to_place_min_dist", rclcpp::ParameterValue(0.05));
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/joey/My_orion/src/orion_mtc/src/mtc_node.cpp:103:10: error: ‘using element_type = class rclcpp::Node’ {aka ‘class rclcpp::Node’} has no member named ‘declare_parameter_if_not_declared’
  103 |   node_->declare_parameter_if_not_declared("lower_to_place_max_dist", rclcpp::ParameterValue(0.12));
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/joey/My_orion/src/orion_mtc/src/mtc_node.cpp:104:10: error: ‘using element_type = class rclcpp::Node’ {aka ‘class rclcpp::Node’} has no member named ‘declare_parameter_if_not_declared’
  104 |   node_->declare_parameter_if_not_declared("object_position_x", rclcpp::ParameterValue(0.35));
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/joey/My_orion/src/orion_mtc/src/mtc_node.cpp:105:10: error: ‘using element_type = class rclcpp::Node’ {aka ‘class rclcpp::Node’} has no member named ‘declare_parameter_if_not_declared’
  105 |   node_->declare_parameter_if_not_declared("object_position_y", rclcpp::ParameterValue(-0.15));
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/joey/My_orion/src/orion_mtc/src/mtc_node.cpp:106:10: error: ‘using element_type = class rclcpp::Node’ {aka ‘class rclcpp::Node’} has no member named ‘declare_parameter_if_not_declared’
  106 |   node_->declare_parameter_if_not_declared("object_position_z", rclcpp::ParameterValue(0.4));
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/joey/My_orion/src/orion_mtc/src/mtc_node.cpp:107:10: error: ‘using element_type = class rclcpp::Node’ {aka ‘class rclcpp::Node’} has no member named ‘declare_parameter_if_not_declared’
  107 |   node_->declare_parameter_if_not_declared("pregrasp_x", rclcpp::ParameterValue(0.40));
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/joey/My_orion/src/orion_mtc/src/mtc_node.cpp:108:10: error: ‘using element_type = class rclcpp::Node’ {aka ‘class rclcpp::Node’} has no member named ‘declare_parameter_if_not_declared’
  108 |   node_->declare_parameter_if_not_declared("pregrasp_y", rclcpp::ParameterValue(-0.15));
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/joey/My_orion/src/orion_mtc/src/mtc_node.cpp:109:10: error: ‘using element_type = class rclcpp::Node’ {aka ‘class rclcpp::Node’} has no member named ‘declare_parameter_if_not_declared’
  109 |   node_->declare_parameter_if_not_declared("pregrasp_z", rclcpp::ParameterValue(0.62));
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/mtc_node.dir/build.make:76：CMakeFiles/mtc_node.dir/src/mtc_node.cpp.o] 错误 1
gmake[1]: *** [CMakeFiles/Makefile2:137：CMakeFiles/mtc_node.dir/all] 错误 2
gmake: *** [Makefile:146：all] 错误 2
